# Finance

./: CLAUDE.md  README.md  accounts_hack.py  gst_case_drafting.py  gst_financial_governance.py  gst_hack.py  icai_guidance_notes.py  income_tax_hack.py  income_tax_litigation_repository.py  payroll_hack.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_accounts.py  test_gst.py  test_payroll.py
